# JustGBA

./: .gitignore  BENCHMARKS.md  README.md  build.sh  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
app/src/main/java/com/justgba/: MainActivity.kt
app/src/main/java/com/justgba/audio/: AudioEngine.kt
app/src/main/java/com/justgba/data/: RecentRomEntry.kt  RecentRomsManager.kt
app/src/main/java/com/justgba/emulator/: EmulatorThread.kt  NativeBridge.kt
app/src/main/java/com/justgba/input/: InputState.kt  InputUtils.kt  VirtualGamepad.kt
app/src/main/java/com/justgba/settings/: SettingsManager.kt
app/src/main/java/com/justgba/ui/: FilePicker.kt  GameScreen.kt  MainMenu.kt  SettingsDialog.kt
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: strings.xml  themes.xml
